# Smart-lock-door-QT-

./: .Module.symvers.cmd  .RFID-RC522.ko.cmd  .RFID-RC522.mod.cmd  .RFID-RC522.mod.o.cmd  .RFID-RC522.o.cmd  .gitignore  .main.cpp.swp  .modules.order.cmd  .rc522.o.cmd  .rc522_api.o.cmd  CMakeLists.txt  CMakeLists.txt.user.e1bc1f0  Makefile  README.md  RFID-RC522.ko  RFID-RC522.mod  RFID-RC522.mod.c  Rfid_rc522_i2c_linux.pro  SendOpencvToQmlQthread.pro  agent.cpp  agent.h  appcore.cpp  appcore.h  backend.cpp  backend.h  check_password_folder.cpp  check_password_folder.h  checkstatus.cpp  checkstatus.h  checkstatus_ir.cpp  checkstatus_ir.h  config_wifi.qml  dbusadaptor.cpp  dbusadaptor.h  enter_password.qml  hướng-dẫn-build-Qt  main.cpp  main.qml  moc_backend.cpp  modules.order  (+21 more)
AI process/: Face  Face.cpp
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  server.c  server.cpp
source_test/: .quick_start_example1.c.swp  Face  Face.cpp  Touch  Touch.cpp  is_door_close  is_door_close.cpp  is_person  is_person.cpp  quick_start_example1.c  rfid  rfid.cpp  tutorial.txt
test_inotify/: test  test.cpp
